--- a/Bookshelf/Views/Access.xaml
+++ b/Bookshelf/Views/Access.xaml
@@ -7,18 +7,18 @@
              Style="{StaticResource ContentPage}" 
              >
     <ContentPage.Content>
-        <StackLayout  Style="{StaticResource MainStackLayout}">
+        <StackLayout  Style="{StaticResource MainStackLayout}"  VerticalOptions="Center" MaximumWidthRequest="500">
             <Frame Style="{StaticResource MainFrame}">
                 <StackLayout Orientation="Vertical"  >
                     <Image Source="book_solid.png" SemanticProperties.Description="Bookshelf - Gerenciamento de livros" HeightRequest="50" HorizontalOptions="Center" />
                     <Label Text="Email" Style="{StaticResource LblEntry}"></Label>
-                    <Entry x:Name="EntEmail" HorizontalOptions="Start" Style="{StaticResource Entry}"  Text="{Binding Email}" />
+                    <Entry x:Name="EntEmail" HorizontalOptions="Start" Style="{StaticResource Entry}" MaximumWidthRequest="350" MinimumWidthRequest="250" Text="{Binding Email}" />
                     
                     <Label Text="Senha" Style="{StaticResource LblEntry}" ></Label>
                     <Entry x:Name="EntPassword" Style="{StaticResource Entry}" IsPassword="True" HorizontalOptions="Start" WidthRequest="180" Text="{Binding Password}" />
 
-                    <Button x:Name="BtnSignIn" Text="Acessar" Margin="0,10,0,20" Style="{StaticResource MainBtn}" 
-                            FontSize="20" ImageSource="right_to_bracket_solid_20_w.png" 
+                    <Button Text="{Binding SignInText}" Margin="0,10,0,20" Style="{StaticResource MainBtn}" 
+                            FontSize="20" ImageSource="right_to_bracket_solid_20_w.png"  IsEnabled="{Binding BtnSignEnabled}"
                             ContentLayout="Left, 20" Command="{Binding SignInCommand}"  />
 
                     <Grid HorizontalOptions="FillAndExpand" WidthRequest="292">
@@ -30,7 +30,7 @@
                             <ColumnDefinition  Width ="*" />
                         </Grid.ColumnDefinitions>
                         <Button Text="Cadastrar" x:Name="BtnAddUser"
-                                Grid.Row="0" Grid.Column="0" Command="{Binding CreateUserCommand}"
+                                Grid.Row="0" Grid.Column="0" Command="{Binding CreateUserCommand}" Margin="0,0,0,5"
                                 Style="{StaticResource BtnSecondary}" BackgroundColor="#2D4144" FontSize="15" ImageSource="user_plus_solid_15_w.png" ContentLayout="Left, 20" />
                         <Button Text="Recuperar Senha" x:Name="BtnRecoverPassword" 
                                 Grid.Row="1" Grid.Column="0" Command="{Binding UpdatePasswordCommand}"
