--- a/Bookshelf/Views/CreateUser.xaml
+++ b/Bookshelf/Views/CreateUser.xaml
@@ -5,28 +5,24 @@
              Title="Cadastrar Usuário"              
              Style="{StaticResource ContentPage}" >
     <ContentPage.Content>
-        <StackLayout  VerticalOptions="Center"  >
+        <VerticalStackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="Center" MaximumWidthRequest="500">
             <Frame Style="{ StaticResource MainFrame }">
-                <StackLayout Style="{StaticResource MainStackLayout}">
-
-                    <!--<Image SemanticProperties.Description="Criar Usuário" HeightRequest="30" WidthRequest="50"  Style="{ StaticResource ImgIcon }" Source="user_plus_solid_30.png" />-->
+                <VerticalStackLayout>
+                    <!--<Image SemanticProperties.Description="Criar Usuário" HeightRequest="30" WidthRequest="80" Source="user_plus_solid_30.png" />-->
 
                     <Label Text="Email" Style="{StaticResource LblEntry}" />
-                    <Entry Style="{StaticResource Entry}" x:Name="EntEmail" Text="{Binding Email}" MaxLength="150" MaximumWidthRequest="350" MinimumWidthRequest="250" Keyboard="Email"  />
+                    <Entry Style="{StaticResource Entry}" Text="{Binding Email}" MaxLength="150" MaximumWidthRequest="350" MinimumWidthRequest="250" Keyboard="Email"  />
 
                     <Label Text="Senha" Style="{StaticResource LblEntry}" />
-                    <Entry IsPassword="True" Style="{StaticResource Entry}" x:Name="EntSenha" Text="{Binding Password}" MaximumWidthRequest="250" MinimumWidthRequest="150" MaxLength="25" />
+                    <Entry IsPassword="True" Style="{StaticResource Entry}" Text="{Binding Password}" MaximumWidthRequest="250" MinimumWidthRequest="150" MaxLength="25" />
 
                     <Label Text="Confirmação da senha" Style="{StaticResource LblEntry}" />
-                    <Entry IsPassword="True" Style="{StaticResource Entry}"  x:Name="EntConfSenha"  Text="{Binding ConfirmPassword}"  MaximumWidthRequest="250" MinimumWidthRequest="150" MaxLength="25"/>
+                    <Entry IsPassword="True" Style="{StaticResource Entry}" x:Name="EntConfSenha" Text="{Binding ConfirmPassword}" MaximumWidthRequest="250" MinimumWidthRequest="150" MaxLength="25"/>
 
-                    <!---->
-                    <Button x:Name="BtnCreateUser" Text="Cadastrar" Style="{StaticResource MainBtn}" 
-                            ImageSource="user_plus_solid_15_w.png" ContentLayout="Left, 10"
-                            Command="{Binding CreateUserCommand}"
-                            IsEnabled="{Binding BtnCreateUserIsEnabled}" Margin="0,10,0,20" />
-                </StackLayout>
+                    <Button x:Name="BtnCreateUser" Text="Cadastrar" Style="{StaticResource MainBtn}" ImageSource="user_plus_solid_15_w.png" ContentLayout="Left, 10"
+                            Command="{Binding CreateUserCommand}" IsEnabled="{Binding BtnCreateUserIsEnabled}" Margin="0,10,0,20" />
+                </VerticalStackLayout>
             </Frame>
-        </StackLayout>
+        </VerticalStackLayout>
     </ContentPage.Content>
 </ContentPage>
