--- a/Bookshelf/Views/UpdatePassword.xaml
+++ b/Bookshelf/Views/UpdatePassword.xaml
@@ -5,19 +5,18 @@
              Style="{StaticResource ContentPage}" 
              Title="Recuperar senha" >
     <ContentPage.Content>
-        <StackLayout  VerticalOptions="Center"  >
+        <VerticalStackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="Center" MaximumWidthRequest="500" >
             <Frame Style="{ StaticResource MainFrame }">
-                <StackLayout Style="{StaticResource MainStackLayout}">
-                    
+                <VerticalStackLayout>
                     <!--<Image SemanticProperties.Description="Alterar senha" HeightRequest="30"  Style="{ StaticResource ImgIcon }" Source="unlock_solid_30.png" />-->
 
                     <Label Text="Email" Style="{StaticResource LblEntry}"/>
-                    <Entry Text="{Binding Email}" x:Name="EntEmail" MaxLength="400" Style="{StaticResource Entry}" />
+                    <Entry Text="{Binding Email}" MaxLength="400" Style="{StaticResource Entry}" MaximumWidthRequest="350" MinimumWidthRequest="250"/>
 
-                    <Button Text="Enviar Email de Recuperação de Senha" x:Name="BtnConfirmar" Style="{StaticResource MainBtn}" Command="{Binding UpdatePasswordCommand}" Margin="0,10,0,5"
-                             FontSize="10" ImageSource="envelope_solid_20_w.png" ContentLayout="Left, 20" /> 
-                </StackLayout>
+                    <Button Text="Enviar Email de Alteração de Senha" x:Name="BtnConfirmar" Style="{StaticResource MainBtn}" Command="{Binding UpdatePasswordCommand}" Margin="0,10,0,5"
+                             FontSize="10" ImageSource="envelope_solid_20_w.png" ContentLayout="Left, 20" />
+                </VerticalStackLayout>
             </Frame>
-        </StackLayout>
+        </VerticalStackLayout>
     </ContentPage.Content>
 </ContentPage>
